namespace/llm/vllm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm
  namespace: llm
spec:
  selector:
    app: vllm
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
