namespace/llm/vllm/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vllm-engine-https
  namespace: llm
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vllm.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: vllm-engine
          port: 8000
  tls:
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vllm-engine-http
  namespace: llm
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`vllm.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: vllm-engine
          port: 8000
